# zwd-backend

./: .editorconfig  .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.yml
app/: Dockerfile  asgi.py  manage.py  pyproject.toml  requirements.txt  settings.py  wsgi.py
app/apps/address/: models.py  serializers.py  views.py
app/apps/address/migrations/: 0001_initial.py
app/apps/advisor/: admin.py  mixins.py  models.py  serializers.py  views.py
app/apps/advisor/fixtures/: fixture.json
app/apps/advisor/migrations/: 0001_initial.py  0002_alter_advisor_options.py
app/apps/cases/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  views.py
app/apps/cases/fixtures/: fixture.json
app/apps/cases/migrations/: 0001_initial.py  0002_casestatetype.py  0003_case_advice_type_case_homeowner_association.py  0004_case_created_case_updated.py  0005_casedocument.py  0006_rename_created_at_casedocument_created.py  0007_case_author.py  0008_casedocument_author.py  0008_update_description_field_cases_to_blank.py  0009_case_advisor.py  0009_casedocument_deleted.py  0010_case_legacy_id.py  0011_alter_case_advisor_alter_casedocument_case.py  0011_case_end_date.py  0012_alter_case_options_alter_casedocument_options_and_more.py  0012_case_end_date.py  0013_alter_case_options_alter_casedocument_options_and_more.py  0013_rename_casestatetype_casestatus.py  0014_alter_casestatus_options_casestatus_position.py  0014_rename_casestatetype_casestatus_and_more.py  0015_case_application_type_alter_case_advice_type_and_more.py  0016_caseclosereason_caseclose.py  0017_alter_case_created.py  0018_case_prefixed_dossier_id.py  0019_backfill_prefixed_dossier_id.py  0020_case_request_date.py  0021_case_communication_note.py  0022_casecommunicationnote.py  0023_remove_case_communication_note.py  0024_remove_casecommunicationnote.py  0025_move_course_to_application_type.py  0026_alter_case_application_type.py  0027_alter_case_advice_type.py  0028_alter_case_advice_type_old_variants.py
app/apps/cases/tests/: tests_api.py  tests_models.py
app/apps/events/: admin.py  mixins.py  models.py  serializers.py
app/apps/events/migrations/: 0001_initial.py  0002_alter_caseevent_options_and_more.py  0003_alter_caseevent_options.py  0003_alter_caseevent_type.py
app/apps/events/tests/: tests_api.py  tests_models.py
app/apps/homeownerassociation/: admin.py  apps.py  mixins.py  models.py  serializers.py  utils.py  views.py
app/apps/homeownerassociation/importers/: base.py  contact_importer.py  course_participant_importer.py  letter_importer.py
app/apps/homeownerassociation/migrations/: 0001_initial.py  0002_contact.py  0003_owner.py  0004_alter_owner_name.py  0005_rename_created_at_homeownerassociation_created.py  0006_district_and_more.py  0007_neighborhood.py  0008_homeownerassociation_neighborhood.py  0009_homeownerassociation_zip_code.py  0010_added_wijk.py  0011_alter_wijk_options.py  0012_priorityzipcode.py  0013_alter_contact_options_alter_district_options_and_more.py  0014_add_kvk_nummer.py  0015_rename_number_of_appartments_homeownerassociation_number_of_apartments_and_more.py  0016_add_annotation.py  0017_add_hoa_communication_note.py  0018_add_contact_is_active.py  0018_convert_contact_to_foreignkey.py  0019_add_is_imported_to_communication_note.py  0019_convert_contact_to_foreignkey.py  0020_contact_course_date.py  0021_contact_is_primary.py  0022_neighborhood_priority_neighborhood.py  0023_delete_priorityzipcode.py
app/apps/users/: admin.py  auth.py
app/apps/workflow/: admin.py  apps.py  managers.py  models.py  serializers.py  signals.py  task_completion.py  task_state.py  tasks.py  user_tasks.py  utils.py  views.py
app/clients/: dso_client.py  kvk_client.py  subsidy_client.py
app/config/: asgi.py  celery.py  config.ini  logging.py  settings.py  urls.py  wsgi.py
app/data/: buurtnamen.txt  zwd-vve-brief.csv  zwd-vve-contacten.csv  zwd-vve-cursisten.csv
app/deploy/: docker-entrypoint.sh
app/utils/: exceptions.py  pagination.py  test_utils.py
redis/: Dockerfile
(+89 files in other folders)
