[project]
name = "zwd-backend"
version = "1.0.0"
description = "Zaken Woningkwaliteit Duurzaamheid (ZWD) backend"
requires-python = "~=3.13.0"
dependencies = [
    "azure-identity~=1.23",
    "azure-monitor-opentelemetry~=1.6",
    "azure-storage-blob~=12.24",
    "celery~=5.5",
    "debugpy~=1.8",
    "django_celery_results~=2.5",
    "django-celery-beat~=2.7",
    "django-cors-headers~=4.7",
    "django-filter~=25.1",
    "django-spaghetti-and-meatballs~=0.4",
    "django-storages~=1.14",
    "Django~=5.2",
    "djangorestframework-simplejwt~=5.5",
    "djangorestframework~=3.15",
    "drf-spectacular~=0.27",
    "inflection~=0.5",
    "jsonschema-specifications~=2024.10",
    "jsonschema~=4.24",
    "model-bakery~=1.18",
    "mozilla-django-oidc~=4.0",
    "psycopg2-binary~=2.9",
    "python-magic~=0.4",
    "redis~=6.3",
    "referencing~=0.36",
    "rpds-py~=0.26",
    "spiffworkflow~=3.1",
    "uritemplate~=4.1",
    "uwsgi~=2.0",
    "watchdog~=6.0",
]

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]
