[project]
name = "zwd-backend"
version = "0.1.0"
description = "Zaken Woningkwaliteit Duurzaamheid (ZWD) backend"
authors = [{ name = "Gemeente Amsterdam", email = "datapunt@amsterdam.nl" }]
readme = "../README.md"
package-mode = false
requires-python = "~=3.13"
packages = [{ include = "apps" }]

dependencies = [
    "azure-identity (~=1.23)",
    "azure-monitor-opentelemetry (~=1.6)",
    "azure-storage-blob (~=12.24)",
    "celery (~=5.5)",
    "debugpy (~=1.8)",
    "Django (~=5.0)",
    "django_celery_results (~=2.5)",
    "django-celery-beat (~=2.7)",
    "django-cors-headers (~=4.7)",
    "django-filter (~=25.0)",
    "django-spaghetti-and-meatballs (~=0.4)",
    "django-storages (~=1.14)",
    "djangorestframework (~=3.15)",
    "djangorestframework-simplejwt (~=5.5)",
    "drf-spectacular (~=0.27)",
    "inflection (~=0.5)",
    "jsonschema (~=4.24)",
    "jsonschema-specifications (~=2024.10)",
    "model-bakery (~=1.18)",
    "mozilla-django-oidc (~=4.0)",
    "psycopg2-binary (~=2.9)",
    "python-magic (~=0.4)",
    "redis (~=6.3)",
    "referencing (~=0.36)",
    "rpds-py (~=0.26)",
    "spiffworkflow (~=3.1)",
    "uritemplate (~=4.1)",
    "uwsgi (~=2.0)",
    "watchdog (~=6.0)",
]

[project.group.dev.dependencies]
pre-commit = "~=3.0"
flake8 = "~=7.0"

[project.scripts]
manage = "manage:main"

[build-system]
requires = ["poetry-core~=1.9"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false
